--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,3 +1,20 @@
 .title {
     color: blue;
 }
+
+.list {
+  
+    list-style: none;
+}
+
+/* .item {
+
+} */
+
+.btn__list {
+    display: flex;
+}
+
+.btn {
+    margin-left: 10px;
+}
