--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -17,4 +17,14 @@ display: none;
 
 .btn {
     margin-left: 10px;
+    background-color: rgb(131, 86, 173);
+    color: aliceblue;
+border: none;
+border-radius: 10px;
+padding: 10px 25px;
+cursor: pointer;
+}
+.btn:hover {
+    background-color: rgb(75, 40, 107);
+    box-shadow: 4px 4px 2px 1px rgba(0, 0, 255, .2);
 }
