--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -7,12 +7,12 @@ body {
 }
 
 .list {
-  
+
     list-style: none;
 }
 
 .isHidden {
-display: none;
+    display: none;
 }
 
 .btn__list {
@@ -21,14 +21,16 @@ display: none;
 
 .btn {
     margin-left: 10px;
-    background-color: rgb(131, 86, 173);
-    color: aliceblue;
-border: none;
-border-radius: 10px;
-padding: 10px 25px;
-cursor: pointer;
+    background-color: gray;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 15px;
+    cursor: pointer;
 }
+
 .btn:hover {
-    background-color: rgb(75, 40, 107);
-    box-shadow: 4px 4px 2px 1px rgba(0, 0, 255, .2);
+    background-color:black;
+    color: white;
+   
 }
